--- a/components/candy/aurora/aurora.module.scss
+++ b/components/candy/aurora/aurora.module.scss
@@ -7,6 +7,10 @@
 			fill: #8378ff;
 		}
 	}
+
+	@media ( max-width: 480px ) {
+		width: 100%;
+	}
 }
 
 .aurora {
